--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
+    "fb": "^2.0.0",
     "got": "^11.8.3",
     "image-average-color": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
