--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dont-crop": "^0.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
