--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
     "got": "^11.8.3",
-    "image-average-color": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.20",
     "sharp": "^0.31.1",
     "uuid-v4": "^0.1.0"
